<resources>
    <string name="app_name">Cu Laundry</string>
    <string name="email_hint">group1@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="forgot">Forgot?</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="pickup">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="order">Order</string>
    <string name="hello">Hello</string>
    <string name="choose">Choose your type of service</string>
    <string name="title_activity_home_page">HomePage</string>
</resources>
